[package]
name = "literate"
version = "0.1.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/literate-rs"
repository = "https://github.com/misalcedo/literate-rs"
documentation = "https://docs.rs/literate"

[[bin]]
name = "literate"
path = "bin/main.rs"
required-features = ["cli"]

[profile.release]
lto = true
debug = true

[features]
cli = ["clap"]

[dependencies]
clap = { version = "3.0", features = ["derive"], optional = true }
pulldown-cmark = "0.9"