[package]
name = "literate"
description = "A literate programming tool that extracts code written in your Markdown files."
version = "0.2.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/literate-rs"
repository = "https://github.com/misalcedo/literate-rs"
documentation = "https://docs.rs/literate"

[[bin]]
name = "literate"
path = "bin/main.rs"
required-features = ["cli"]

[profile.release]
lto = true
debug = true

[features]
default = []
cli = ["anyhow", "clap", "tracing-subscriber"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "3.0", features = ["derive"], optional = true }
pulldown-cmark = "0.9"
regex = "1.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
