[package]
name = "literate"
description = "A literate programming tool that extracts code written in your Markdown files."
version = "0.6.0"
authors = ["Miguel D. Salcedo <miguel@salcedo.cc>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/misalcedo/literate-rs"
repository = "https://github.com/misalcedo/literate-rs"
documentation = "https://docs.rs/literate"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "literate"
path = "bin/main.rs"
required-features = ["cli"]

[profile.release]
lto = true
debug = true

[features]
default = []
cli = ["anyhow", "clap", "tracing-subscriber", "walk"]
walk =["walkdir"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
pulldown-cmark = "0.9"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
walkdir = { version = "2.4", optional = true }